--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-.idea/
-.vscode/
-node_modules/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
 build
+
+# misc
 .DS_Store
-*.tgz
-my-app*
-template/src/__tests__/__snapshots__/
-lerna-debug.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/.changelog
-.npm/
-yarn.lock
+.env
+npm-debug.log
+.idea
