--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.8.7",
     "babel-loader": "^8.0.6",
+    "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
