--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.8.7",
-    "babel-loader": "^8.0.6",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "webpack": "^4.42.0"
+    "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^25.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "react-test-renderer": "^16.13.0",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
