--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "npx webpack-dev-server -d --open",
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run build && npx gh-pages -d build"
   },
   "keywords": [],
   "author": "",
