--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "test": "jest",
     "start": "npx webpack-dev-server -d --open",
     "build": "webpack",
-    "deploy": "npm run build && npx gh-pages -d build"
+    "deploy": "npx gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@types/jest": "^25.1.4",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-flexbox-grid": "^2.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.7",
