--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "@babel/core": "^7.8.7",
     "@types/jest": "^25.1.4",
+    "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-flexbox-grid": "^2.1.2"
   },
