--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "tests:watch": "jest --watch",
+    "tests:coverage": "jest --coverage",
     "start": "npx webpack-dev-server -d --open",
     "build": "webpack",
     "deploy": "npx gh-pages -d build"
@@ -12,16 +14,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+    }
+  },
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@testing-library/react": "^10.0.1",
     "@types/jest": "^25.1.4",
     "bootstrap": "^4.4.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-dom": "^4.0.0",
+    "jest-transform-stub": "^2.0.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
-    "react-flexbox-grid": "^2.1.2"
+    "react-flexbox-grid": "^2.1.2",
+    "react-test-render": "^1.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.7",
