--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^10.0.1",
     "@types/jest": "^25.1.4",
     "bootstrap": "^4.4.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest-dom": "^4.0.0",
     "jest-transform-stub": "^2.0.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
