--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,14 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+  deploy:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm run deploy
 workflows:
     build-and-test:
       jobs:
