--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,8 @@ jobs:
             - run: npm install
             - run: npm test
             - run: npm run build
+            - run: git config --global user.email "torra.agustinignacio@gmail.com"
+            - run: git config --global user.name "torraagus"
             - run: npm run deploy
 workflows:
     build-and-test:
