--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             - run: npm test
             - run: npm run build
             - run: git config --global user.email "torra.agustinignacio@gmail.com"
-            - run: git config --global user.name "torraagus"
+            - run: git config --global user.name "Torra Agustin"
             - run: npm run deploy
 workflows:
     build-and-test:
