--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,27 +2,74 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  build:
     executor:
       name: node/default
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints:
-            - "a3:64:18:e9:19:7b:18:83:a7:ef:29:ec:ca:b9:a5:59"
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
-            - run: npm run build
-            - run: git config --global user.email "torra.agustinignacio@gmail.com"
-            - run: git config --global user.name "Torra Agustin"
-            - run: npm run deploy
+      steps:
+        - checkout
+        - run:
+            name: install packages and run tests 
+            command: |
+              npm install
+              npm test
+        - persist_to_workspace:
+          root: public
+          paths:
+            - "*"
+  deploy:
+    executor:
+      name: node/default
+      steps:
+        - checkout
+        - attach_workspace:
+          at: public
+        - add_ssh_keys:
+            fingerprints:
+              - "a3:64:18:e9:19:7b:18:83:a7:ef:29:ec:ca:b9:a5:59"
+        - deploy:
+          name: Deploy website
+          command: |
+            git config --global user.email "torra.agustinignacio@gmail.com"
+            git config --global user.name "Torra Agustin"
+#            sh deploy.sh
+#  build-and-test:
+#    executor:
+#      name: node/default
+#    steps:
+#      - checkout
+#      - add_ssh_keys:
+#          fingerprints:
+#            - "a3:64:18:e9:19:7b:18:83:a7:ef:29:ec:ca:b9:a5:59"
+#      - node/with-cache:
+#          steps:
+#            - run: npm install
+#            - run: npm test
+#            - run: npm run build
+#            - run: git config --global user.email "torra.agustinignacio@gmail.com"
+#            - run: git config --global user.name "Torra Agustin"
+#            - run: npm run deploy
+# workflows:
+#    build-and-test:
+#      jobs:
+#        - build-and-test:
+#            filters:
+#                branches:
+#                  ignore:
+#                    - gh-pages
+
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test:
-            filters:
-                branches:
-                  ignore:
-                    - gh-pages
+  version: 2
+  build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              ignore:
+                - master
+                - gh-pages
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: feature
