--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
             npm install
             npm test
       - persist_to_workspace:
-          root: build
+          root: /home/circleci/project
           paths:
             - "*"
   deploy:
