--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: public
+          at: /home/circleci/project
       - add_ssh_keys:
           fingerprints:
             - "a3:64:18:e9:19:7b:18:83:a7:ef:29:ec:ca:b9:a5:59"
