--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - persist_to_workspace:
           root: /home/circleci/project
           paths:
-            - "*"
+            - "build/*"
   deploy:
     docker:
       - image: circleci/node:10
