--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,14 @@ jobs:
       - persist_to_workspace:
           root: /home/circleci/project
           paths:
-            - "build/*"
+            - "*"
   deploy:
     docker:
       - image: circleci/node:10
     steps:
       - checkout
       - attach_workspace:
-          at: /home/circleci/project
+          at: /home/circleci/project/build
       - add_ssh_keys:
           fingerprints:
             - "a3:64:18:e9:19:7b:18:83:a7:ef:29:ec:ca:b9:a5:59"
