--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - persist_to_workspace:
           root: /home/circleci/project
           paths:
-            - "build/*"
+            - "*"
   deploy:
     docker:
       - image: circleci/node:10
@@ -61,7 +61,7 @@ jobs:
 
 workflows:
   version: 2
-  build:
+  build-and-deploy:
     jobs:
       - build:
           filters:
