--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 #orbs:
 #  node: circleci/node@1.1.6
+orbs:
+  coveralls: coveralls/coveralls@1.0.4
 jobs:
   build:
     docker:
@@ -9,12 +11,17 @@ jobs:
       COVERALLS_REPO_TOKEN: FEX59tfWv60hrqGfwmneHe7dDKaAbHBYK  
     steps:
       - checkout
+      - environment:
+          COVERALLS_REPO_TOKEN: FEX59tfWv60hrqGfwmneHe7dDKaAbHBYK  
       - run:
+          environment:
+            COVERALLS_REPO_TOKEN: FEX59tfWv60hrqGfwmneHe7dDKaAbHBYK  
           name: Install NPM packages, run tests and build
           command: |
             npm install
             npm test
             npm run build
+      - coveralls/upload
       - persist_to_workspace:
           root: /home/circleci/project
           paths:
