--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2.1
 #  node: circleci/node@1.1.6
 #orbs:
 #  coveralls: coveralls/coveralls@1.0.4
+orbs:
+  codecov: codecov/codecov@1.0.5
 jobs:
   build:
     docker:
@@ -10,16 +12,27 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install NPM packages, run tests and build
+          name: Install NPM packages and build
           command: |
             npm install
-            npm test
             npm run build
-#     - coveralls/upload
       - persist_to_workspace:
           root: /home/circleci/project
           paths:
             - "build/*"
+  test:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - run:
+          name: Run tests
+          command: |
+            npm tests:coverage
+      - codecov/upload:
+          file: coverage/*.json
+          flags: frontend
+
   deploy:
     docker:
       - image: circleci/node:10
@@ -39,14 +52,18 @@ jobs:
 
 workflows:
   version: 2
-  build-and-deploy:
+  build-test-and-deploy:
     jobs:
       - build:
           filters:
             branches:
               ignore:
-#                - master
                 - gh-pages
+      - test:
+          filters:
+            branches:
+              ignore:
+                - gh-pages          
       - deploy:
           requires:
             - build
