--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/react": "^10.0.1",
     "@types/jest": "^25.1.4",
     "bootstrap": "^4.4.1",
+    "codecov": "^3.6.5",
     "copy-webpack-plugin": "^5.1.1",
     "dotenv": "^8.2.0",
     "jest-transform-stub": "^2.0.0",
