add build to requires in test job in workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ workflows:
               ignore:
                 - gh-pages
       - test:
+          requires:
+            - build
           filters:
             branches:
               ignore:
