add npm install command in run step in test job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - run:
           name: Run tests
           command: |
+            npm install
             npm run tests:coverage
   deploy:
     docker:
